# python-project-blueprint

./: README.md  codecov.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  pr-checks.yml
docs/: CHECKLIST.md  INSTRUCTIONS.md
